fixed sessionCheck and logout

--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -12,7 +12,7 @@
 {% block nav %}
     <ul class="nav justify-content-end">
         <li class="nav-item">
-            <a class="nav-link" href="/user/logout">Logout</a>
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
     </ul>
 {% endblock %}
