--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -34,7 +34,7 @@
             <td>{{ task.time }}</td>
             <td>{{ task.get_status_display }}</td>
             <td><a class="btn btn-small btn-outline-primary" href="{% url 'edit' task_id=task.id %}">Edit</a>
-                <a class="btn btn-small btn-outline-danger" href="/task/delete/{{task.id}}/">Delete</a></td>
+                <a class="btn btn-small btn-outline-danger" href="{% url 'delete' task_id=task.id %}">Delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
