--- a/apps/task_app/templates/task_app/edit.html
+++ b/apps/task_app/templates/task_app/edit.html
@@ -17,7 +17,7 @@
         <form action="{% url 'update' task_id=task.id %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <input type="text" name="task" class="form-control" placeholder="{{task.task}}" maxlength="100" required />
+                <input type="text" name="task" class="form-control" placeholder="{{task.task}}" maxlength="100" />
             </div>
             <div class="form-group">
                 <input type="text" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="{{task.date}}"/>
