minor changes to dash

--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -74,7 +74,7 @@
                 <input type="text" name="task" class="form-control" placeholder="Enter task description" maxlength="100" required />
             </div>
             <div class="form-group">
-                <input type="text" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="Enter task date"/>
+                <input type="date" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="Enter task date"/>
                     <script type="text/javascript">
                         $(function () {
                             $('#datetimepicker5').datetimepicker({
