--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -85,10 +85,15 @@
                     </script>
             </div> -->
             <div class="form-group">
-                <input type="text" name="date" class="form-control datetimepicker-input" id="datetimepicker4" data-toggle="datetimepicker" data-target="#datetimepicker4" placeholder="Enter task time"/>
+                <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+                    <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
+                    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker" placeholder="Enter task date and time">
+                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                    </div>
+                </div>
                     <script type="text/javascript">
                         $(function () {
-                            $('#datetimepicker4').datetimepicker();
+                            $('#datetimepicker1').datetimepicker();
                         });
                     </script>
             </div>
