--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -85,15 +85,17 @@
                     </script>
             </div> -->
             <div class="form-group">
-                <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                    <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
-                    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker" placeholder="Enter task date and time">
-                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                    </div>
-                </div>
+                <!-- <div class="input-group date" id="datetimepicker1" data-target-input="nearest"> -->
+                    <input type="date" name="date" class="form-control datetimepicker-input" id="datetimepicker1" data-target="#datetimepicker1" data-toggle="datetimepicker" placeholder="Enter task date and time"/>
+                    <!-- <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker" > -->
+                        <!-- <div class="input-group-text"><i class="fa fa-calendar"></i></div> -->
+                    <!-- </div> -->
+                <!-- </div> -->
                     <script type="text/javascript">
                         $(function () {
-                            $('#datetimepicker1').datetimepicker();
+                            $('#datetimepicker1').datetimepicker({
+                                minDate: 'now'
+                            });
                         });
                     </script>
             </div>
