--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -25,7 +25,7 @@
         <tr>
             <th scope="col">Task</th>
             <th scope="col">Time</th>
-            <th scope="col">Status</th>
+            <th scope="col">Priority</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -46,9 +46,8 @@
     <thead>
         <tr>
             <th scope="col">Task</th>
-            <th scope="col">Date</th>
             <th scope="col">Time</th>
-            <th scope="col">Status</th>
+            <th scope="col">Priority</th>
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -57,7 +56,6 @@
         <tr>
             <th scope="row">{{ task.task }}</th>
             <td>{{ task.date }}</td>
-            <td>{{ task.time }}</td>
             <td>{{ task.get_status_display }}</td>
             <td><a class="btn btn-small btn-outline-primary" href="/task/edit/{{task.id}}/">Edit</a>
                 <a class="btn btn-small btn-outline-danger" href="/task/delete/{{task.id}}/">Delete</a></td>
@@ -96,16 +94,15 @@
                             $('#datetimepicker1').datetimepicker({
                                 minDate: 'now'
                             });
-                        });
-                    </script>
+                        });</script>
             </div>
             <div class="form-group">
                 <select class="form-control" name="status">
-                    <option value="P">Pending</option>
-                    <option value="D">Done</option>
-                    <option value="M">Missed</option>
+                    <option value="H">High</option>
+                    <option value="M">Medium</option>
+                    <option value="L">Low</option>
                 </select>
-                    <small class="form-text text-muted">Select task status</small>
+                    <small class="form-text text-muted">Select task priority</small>
             </div>   
             <button type="submit" class="btn btn-primary">Add task</button>
         </form>
