--- a/apps/task_app/templates/task_app/edit.html
+++ b/apps/task_app/templates/task_app/edit.html
@@ -14,50 +14,58 @@
 <h2>Edit your task</h2>
 
 <div class="col-sm-8">
-        <form action="{% url 'update' task_id=task.id %}" method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="text" name="task" class="form-control" placeholder="{{task.task}}" maxlength="100" />
-            </div>
-            <div class="form-group">
-                <input type="text" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="{{task.date}}"/>
-                    <script type="text/javascript">
-                        $(function () {
-                            $('#datetimepicker5').datetimepicker({
-                                format: 'YYYY-MM-DD',
-                                minDate: 'now'
-                            });
+    <form action="{% url 'update' task_id=task.id %}" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" name="task" class="form-control" placeholder="{{task.task}}" maxlength="100" />
+        </div>
+        <div class="form-group">
+            <input type="date" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="{{task.date}}"/>
+           <script type="application/javascript">
+                $(function () { 
+                    $('datetimepicker5').datetimepicker({ 
+                        minDate: 'now' 
+                    });
+                });</script>
+        </div>
+        <!-- <div class="form-group">
+            <input type="date" name="date" class="form-control datetimepicker-input" id="datetimepicker5" data-toggle="datetimepicker" data-target="#datetimepicker5" placeholder="{{task.date}}"/>
+                <script type="text/javascript">
+                    $(function () {
+                        $('#datetimepicker5').datetimepicker({
+                            minDate: 'now'
                         });
-                    </script>
-            </div>
-            <div class="form-group">
-                <input type="text" name="time" class="form-control datetimepicker-input" id="datetimepicker4" data-toggle="datetimepicker" data-target="#datetimepicker4" placeholder="{{task.time}}"/>
-                    <script type="text/javascript">
-                        $(function () {
-                            $('#datetimepicker4').datetimepicker({
-                                format: 'LT'
-                            });
+                    });
+                </script>
+        </div>
+        <div class="form-group">
+            <input type="date" name="time" class="form-control datetimepicker-input" id="datetimepicker4" data-toggle="datetimepicker" data-target="#datetimepicker4" placeholder="{{task.time}}"/>
+                <script type="text/javascript">
+                    $(function () {
+                        $('#datetimepicker4').datetimepicker({
+                            format: 'LT'
                         });
-                    </script>
-            </div>
-            <div class="form-group">
-                <select class="form-control" name="status">
-                    <option value="P" {% if task.status == 'P' %} selected {% endif %}>Pending</option>
-                    <option value="D" {% if task.status == 'D' %} selected {% endif %}>Done</option>
-                    <option value="M" {% if task.status == 'M' %} selected {% endif %}>Missed</option>
-                </select>
-                    <small class="form-text text-muted">Select task status</small>
-            </div>   
-            <button type="submit" class="btn btn-primary">Update task</button>
-        </form>
-        {% if messages %}
-            {% for message in messages %}
-                {% if message.tags == 'error' %}
-                    <div class="alert alert-danger" role="alert">{{ message }}</div>
-                {% elif message.tags == 'success' %}
-                    <div class="alert alert-success" role="alert">{{ message }}</div>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
+                    });
+                </script>
+        </div> -->
+        <div class="form-group">
+            <select class="form-control" name="status">
+                <option value="H" {% if task.status == 'P' %} selected {% endif %}>High</option>
+                <option value="M" {% if task.status == 'D' %} selected {% endif %}>Medium</option>
+                <option value="L" {% if task.status == 'M' %} selected {% endif %}>Low</option>
+            </select>
+                <small class="form-text text-muted">Select task priority</small>
+        </div>   
+        <button type="submit" class="btn btn-primary">Update task</button>
+    </form>
+    {% if messages %}
+        {% for message in messages %}
+            {% if message.tags == 'error' %}
+                <div class="alert alert-danger" role="alert">{{ message }}</div>
+            {% elif message.tags == 'success' %}
+                <div class="alert alert-success" role="alert">{{ message }}</div>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
 </div>
 {% endblock %}
