--- a/apps/task_app/templates/task_app/dash.html
+++ b/apps/task_app/templates/task_app/dash.html
@@ -92,7 +92,7 @@
                     <script type="text/javascript">
                         $(function () {
                             $('#datetimepicker1').datetimepicker({
-                                minDate: 'now'
+                                minDate: moment()
                             });
                         });</script>
             </div>
